--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body, html {
   height: 100%;
   font-family: 'IM Fell English', serif;
-  overflow: hidden;
+  overflow-x: auto; /* horizontaal scrollen indien nodig */
 }
 
 header {
@@ -44,16 +44,21 @@ header {
 
 main {
   display: flex;
-  height: 100vh;
+  height: calc(100vh - 80px); /* 100% hoogte min header */
   margin-top: 80px; /* ruimte voor de header */
 }
 
 .vak {
   flex: 1;
+  min-width: 20%; /* 5 vakken naast elkaar */
   border: 1px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 2rem;
   text-align: center;
+}
+
+main {
+  overflow-x: scroll;
 }
