--- a/style.css
+++ b/style.css
@@ -80,3 +80,19 @@ main {
   }
 }
 
+.intro-video-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #e50a06;
+  z-index: 1000;
+  overflow: hidden;
+}
+
+.intro-video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
