--- a/style.css
+++ b/style.css
@@ -96,3 +96,11 @@ main {
   height: 100%;
   object-fit: cover;
 }
+
+footer {
+  margin-top: 80px;
+  padding: 20px;
+  text-align: center;
+  font-size: 0.9rem;
+  border-top: 1px solid black;
+}
