--- a/style.css
+++ b/style.css
@@ -104,3 +104,16 @@ footer {
   font-size: 0.9rem;
   border-top: 1px solid black;
 }
+
+.left, .right {
+  display: flex;
+  align-items: center;
+}
+
+.right select {
+  margin-left: 10px;
+}
+
+.right {
+  gap: 10px;
+}
