--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ header {
   background-color: white;
   z-index: 10;
   border-bottom: 1px solid black;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 
