--- a/style.css
+++ b/style.css
@@ -60,7 +60,16 @@ header {
 .top-button {
   text-decoration: none;
   color: black;
-  margin-right: 15px;
+  font-size: 1.1rem; /* groter lettertype */
+  padding: 10px 16px; /* extra ruimte rond de tekst */
+  border: 1px solid black; /* optioneel, voor meer visuele kracht */
+  border-radius: 4px;       /* afgeronde hoeken */
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.top-button:hover {
+  background-color: #e50a06;
+  color: white;
 }
 
 .language-select {
