--- a/style.css
+++ b/style.css
@@ -123,11 +123,11 @@ main {
   display: flex;
   flex-direction: row;
   width: 100vw;
-  height: 100vh;
-  margin: 0;
+  height: calc(100vh - 80px); /* ← trek hoogte van header af */
+  margin-top: 80px; /* ← om niet onder header te vallen */
   padding: 0;
   position: relative;
-  z-index: 1; /* onder de header */
+  z-index: 1;
 }
 
 .vak {
