--- a/style.css
+++ b/style.css
@@ -121,19 +121,14 @@ header {
 /* ========== MAIN: 5 VAKKEN VOLLEDIGE BREEDTE EN HOOGTE ========== */
 main {
   display: flex;
-  flex-direction: row;
   width: 100vw;
-  height: calc(100vh - 80px); /* Alleen dit gebruiken */
-  padding: 0;
-  position: relative;
-  z-index: 1;
+  height: 100vh;
 }
-
 
 .vak {
   flex: 1;
   height: 100%;
-  width: 100%;
+  padding-top: 100px; /* om niet onder header te vallen */
   border: 1px solid black;
   display: flex;
   justify-content: center;
