--- a/style.css
+++ b/style.css
@@ -123,13 +123,14 @@ main {
   display: flex;
   width: 100vw;
   height: 100vh;
+  padding-top: 80px; /* ruimte voor de header */
+  padding-bottom: 40px; /* ruimte voor de footer */
+  box-sizing: border-box;
 }
 
 .vak {
   flex: 1;
   height: 100%;
-  padding-top: 100px; /* om niet onder header te vallen */
-  border: 1px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -139,6 +140,7 @@ main {
   color: black;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
+
 
 .vak:hover,
 .vak:active {
@@ -150,16 +152,12 @@ main {
 
 /* ========== OPTIONELE FOOTER (zwevend) ========== */
 footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
   width: 100%;
   background: white;
   text-align: center;
   padding: 10px;
   font-size: 0.9rem;
   border-top: 1px solid black;
-  z-index: 10;
 }
 
 
